# clickhouse-bench

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  clickhouse-shape-matching-brief.tex  paper.md  paper.tex  pyproject.toml
docs/: README.md  _research_notes.md  cloud-architecture.md  codecs-compression.md  data-types.md  ingestion.md  joins-and-dictionaries.md  materialized-views.md  merge-tree.md  observability.md  parallel-replicas.md  partitioning-and-ttl.md  primary-key.md  priority-list.md  projections.md  query-cache.md  sharding-and-distributed.md  skip-indexes.md
results/: aggregate.md  benchmark_20260503_191546.json  compare_features_20260503_191654.json  compare_features_20260503_191711.json  compare_features_20260503_191717.json  compare_features_20260503_191721.json  compare_features_20260503_191723.json  compare_features_20260503_191731.json  compare_features_20260503_191740.json  compare_features_20260503_191746.json  compare_features_20260503_192945.json  compare_features_20260503_192950.json  compare_features_20260503_192956.json  compare_features_20260503_194824.json  compare_features_20260503_194828.json  evaluation_summary.txt  experiment_c1_dictionary_vs_join_20260503_192050.json  experiment_c2_query_cache_20260503_192130.json  experiment_c3_parallel_replicas_20260503_192203.json  experiment_c4_async_inserts_20260503_192314.json  experiment_c5_mutation_cost_20260503_192410.json  experiment_c6_optimize_final_cost_20260503_192446.json  experiment_c7_string_vs_native_20260503_192524.json  experiment_c8_nullable_overhead_20260503_192714.json  (+6 more)
(+27 files in other folders)
